objects/tffa__Brand__c.object
<CustomObject>
    <description>Multi-branding occurs when banks market similar and competing products under the different sub-brands that they own, many of which look like regional banks or non-banks</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address for Brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AndroidApp__c</fullName>
        <description>Playstore link for Android App</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AndroidApp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppleApp__c</fullName>
        <description>Apple Store link for IOS App</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AppleApp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankShortName__c</fullName>
        <description>Charter Short Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIPrmyOffcrNbr__c</fullName>
        <description>CI Prmy Offcr Nbr</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Officer Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City for Brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactNumber__c</fullName>
        <description>Contact Number for Brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default Location for the Brand</description>
        <label>Default Location</label>
        <referenceTo>tffa__Location__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailHeaderLogoUrl__c</fullName>
        <description>URL For the logo which will be reflected in the email.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>EmailHeaderLogoUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailPhone__c</fullName>
        <description>Phone number which will get reflected in the email.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>EmailPhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FooterLogo__c</fullName>
        <description>Footer Logo for Brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Footer Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeaderLogo__c</fullName>
        <description>Header Logo for Brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Header Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleAppointmentUrl__c</fullName>
        <description>Schedule Appointment Url</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Schedule Appointment Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SenderEmailId__c</fullName>
        <description>Sender Email Id for Brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sender Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State for Brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SwiftCode__c</fullName>
        <description>SwiftCode for Brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Swift Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Zip for Brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the brand is active for consumption. Derived from disabled and effective period (StartDate &amp; EndDate) of the brand.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__StartDate__c &lt;= TODAY() &amp;&amp; tffa__EndDate__c &gt;= TODAY()</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AppleMobileAppUrl__c</fullName>
        <description>Url to the apple app app store to download the banks app</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Apple Mobile App Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__BicCode__c</fullName>
        <description>BIC stands for Bank Identifier Code. It is an international bank code that identifies particular banks worldwide. Same as SWIFT Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BIC/SWIFT Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>Unique code for the brand</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__ContactAddress__c</fullName>
        <description>Contact Address for Brand in a Single Line</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contact Address for Brand in a Single Line</inlineHelpText>
        <label>Contact Address (Single line)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ContactEmail__c</fullName>
        <description>Contact Email for Brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ContactPhone__c</fullName>
        <description>Contact Phone for Brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DefaultSenderEmailAddress__c</fullName>
        <description>Org wide sender email Address for this brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Default Sender Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A summarized description, meant to provide a quick overview about the brand.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures explicit disabling of brand independent of any configured effective range.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EndDate__c</fullName>
        <defaultValue>DATE(2049,1,1)</defaultValue>
        <description>The date on which the brand expires. Captures the upper bound of the effective range.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id of the brand as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FullDescription__c</fullName>
        <description>A comprehensive description enumerating key features about the brand, can include marketing message</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Full description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__GoogleMobileAppUrl__c</fullName>
        <description>A url to google mobile app store link for download. Will be used to show in confirmation page</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Google Mobile App Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__InfoUrl__c</fullName>
        <description>Location of additional resource about the brand as a url.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OnlineBankingEntityId__c</fullName>
        <description>Core banking entity id as identified by the Online banking provider system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Online Banking Entity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__OnlineBankingLoginUrl__c</fullName>
        <description>Login Url to the Online Banking Url</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Login Url to the Online Banking Url for authentication</inlineHelpText>
        <label>Online Banking Login Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__OnlineBankingProvider__c</fullName>
        <description>Name of the Online banking provider system. e.g. NCRD3, NCRDI</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Online Banking Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__OnlineBankingUrl__c</fullName>
        <description>Url to the Online Banking Url</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Online Banking Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tffa__RoutingNumber__c</fullName>
        <description>Routing number of the branch. An identification number assigned to the banking institution.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ShortName__c</fullName>
        <description>Short Name of the brand</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date from which the brand is active or ready for consumption. Captures the lower bound of the effective range.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__Theme__c</fullName>
        <description>Deprecated , Use lookup from UX Strategy</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The theme prefix of the application</inlineHelpText>
        <label>UX Strategy(Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Code__c</columns>
        <columns>tffa__ContactEmail__c</columns>
        <columns>ContactNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__AllActive</fullName>
        <columns>NAME</columns>
        <columns>tffa__Code__c</columns>
        <columns>tffa__ShortName__c</columns>
        <columns>tffa__InfoUrl__c</columns>
        <columns>tffa__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Brands</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>